--- a/src/app/Components/noticia/noticia.component.html
+++ b/src/app/Components/noticia/noticia.component.html
@@ -1,47 +1,24 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-
 <div class="container">
-    <div class="row">
-        <div class="header">
-            <h1>Notícias</h1>
-        </div>
+    <div class="cabecalho">
+        <h1>Últimas Notícias</h1>
+    </div>
 
-        <div class="content">
-            <div class="card">
-                <a href="#"><img src="lankhorst_euronete_brasil_logo.png" alt="Lankhorst Euronete Brasil" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
+    <div class="cartao">
+        <img src="Galeria/Noticias/Noticia1.jpg" alt="">
+
+        <div class="conteudo">
+            <a href="#" class="titulo">
+                <h4>A ABICCA e a ABNT formalizam assinatura de acordo de cooperação.</h4>
+            </a>
+            <div class="data">
+                <i class="bi bi-clock-history me-2"></i>
+                <span>23/10/2024</span>
             </div>
-            <div class="card">
-                <a href="#"><img src="VAN_BEEST.png" alt="VAN BEEST" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
-            </div>
-            <div class="card">
-                <a href="#"><img src="VAN_BEEST.png" alt="VAN BEEST" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
-            </div>
-            <div class="card">
-                <a href="#"><img src="TEIJIN.png" alt="TEIJIN" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.!</p>
+            <p class="descricao">{{descricao.substring(0,400) + '...'}}</p>
+            
+            <!-- Contêiner para centralizar o botão -->
+            <div class="botao-container">
+                <button class="botao">Saiba mais</button>
             </div>
         </div>
     </div>
