Atualização de referecias e bugs

--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -4,7 +4,7 @@
     <div class="buttons">
         <!-- <a mat-button routerLink="/home"><p>Home</p></a> -->
         <a mat-button routerLink="/noticias"><p>Noticias</p></a>
-        <a mat-button routerLink="/sobrenos"><p>Sobre nós</p></a>
+        <a mat-button routerLink="/sobre-nos"><p>Sobre nós</p></a>
         <!-- <a mat-button routerLink="/galeria"><p>Galeria</p></a> -->
         <a mat-button routerLink="/contato"><p>Contato</p></a>
         <a class="associe" mat-button routerLink="/associese"><p>Associe-se</p></a>
