--- a/src/app/Components/sobre/sobre.component.html
+++ b/src/app/Components/sobre/sobre.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="imagem">
+    <div class="containerTextos">
       <H1 class="titulo">SUA EMPRESA SEGURA</H1>
       <p class="texto">PARA UM MERCADO MAIS JUSTO<br> E REGULAMENTADO</p>
       <a href="" class="button" mat-button routerLink="/associese">ASSOCIE-SE</a>
