--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,8 @@
 
   --pattern1: url('../public/assets/Patern_Prancheta1.png');
 
-  --image-sobre: url('../public/Galeria/METALURGICA.png');
+  --image-sobre: url('../public/Galeria/Compromisso_SEM_LOGO.jpg');
+  --image-sobre-celular: url('../public/Galeria/Compromisso_SEM_LOGO_Celular.jpg');
 }
 
 html, body {
