--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="corpo">
   <app-sobre></app-sobre>
   <app-associados></app-associados>
-  <!-- <app-noticia></app-noticia> -->
-  <!-- <app-navio></app-navio> -->
-  <!-- <app-imagens2 [images]="images2"
+  <app-noticia></app-noticia>
+  <app-navio></app-navio>
+  <app-imagens2 [images]="images2"
   [autoSlide]="true"
-  [controls]="true"></app-imagens2> -->
+  [controls]="true"></app-imagens2>
   <!-- <app-galeria [images]="images"
     [autoSlide]="false"
     [controls]="true"></app-galeria> -->
-  <!-- <app-animacao-rodape></app-animacao-rodape> -->
+  <app-animacao-rodape></app-animacao-rodape>
 </div>
