--- a/src/app/Components/rodape/rodape.component.html
+++ b/src/app/Components/rodape/rodape.component.html
@@ -18,21 +18,22 @@
         <div class="line-footer2">
             <div class="box-line-footer">
                 <img src="icone2.png" alt="Logotipo ABICCA">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus placeat,?</p>
+                <p>Firmes, lutando por um mercado mais justo e seguro.</p>
             </div>
 
             <div class="box-line-footer">
                 <h3>Endereço</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicin</p>
-                <p>CEP: 00000000</p>
+                <p>Via de Acesso João de Góes, 2° andar, Sala 6, Jandira, SP, Brasil </p>
+                <p>CEP: 06616-130</p>
             </div>
 
             <div class="box-line-footer">
                 <h3>Redes Sociais</h3>
                 <div class="btn-redes">
-                    <a href="#" class="social-btn"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="social-btn"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="social-btn"><i class="bi bi-tiktok"></i></a>
+                    <a href="https://www.instagram.com/a.b.i.c.c.a/" class="social-btn"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.facebook.com/abicca.2024" class="social-btn"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.youtube.com/@ABICCAAssocia%C3%A7%C3%A3o" class="social-btn"><i class="bi bi-youtube"></i></a>
+                    <a href="https://www.linkedin.com/company/abicca/?viewAsMember=true" class="social-btn"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
         </div>
