--- a/src/app/Components/menu-nav/menu-nav.component.css
+++ b/src/app/Components/menu-nav/menu-nav.component.css
@@ -12,12 +12,28 @@
   height: 100%;
 }
 
+/* :host a,
+mat-dialog-actions {
+  ::ng-deep span.mat-mdc-button-touch-target {
+    height: unset;
+  }
+
+  ::ng-deep span.mat-mdc-button-persistent-ripple span.mdc-button__ripple{
+    width: unset;
+  }
+
+  ::ng-deep span.mat-mdc-focus-indicator{
+    width: unset;
+  }
+
+} */
+
 .buttons {
   display: flex;
-  margin-left: auto;
+  justify-content: flex-end;
   align-items: center;
   column-gap: 1%;
-  width: fit-content;
+  width: 100%;
   height: 100%;
 }
 
@@ -25,27 +41,40 @@
   display: flex;
   align-self: center;
   justify-self: center;
+  border-radius: 10px;
+  height: fit-content;
+  width: fit-content;
+  padding: 4px;
+  text-decoration: none;
 }
 
 .buttons p {
   font-size: 2.5vh;
   font-weight: bold;
   margin-bottom: auto;
-  background-image: linear-gradient(180deg, #005B9B 60%, var(--quarta));
+  color: var(--primaria);
+  /* background-image: linear-gradient(180deg, #005B9B 60%, var(--quarta));
   background-size: 100%;
-  background-repeat: repeat;
+  background-position: center;
+  background-repeat: no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  -moz-text-fill-color: transparent;
+  -moz-text-fill-color: transparent; */
 }
+
+
 
 .abicca:hover {
   cursor: pointer;
 }
 
 .buttons a:hover {
-  background-color: #FFF !important;
+  background-color: var(--quarta) !important;
+}
+
+.buttons .signOut:hover {
+  cursor: pointer;
 }
 
 /* Estilos responsivos */
@@ -55,43 +84,64 @@
     height: auto; /* Reduz a altura para dispositivos menores */
   }
 
+  .abicca {
+    width: 10vw;
+  }
+
   .buttons p {
-    font-size: 2vw; /* Aumenta o tamanho do texto */
+    font: bold 2vw "Barlow", sans-serif;
   }
 
   .buttons {
     flex-direction: row; /* Coloca os botões em coluna */
-    align-items: flex-start; /* Alinha os botões à esquerda */
+    justify-content: flex-end; /* Alinha os botões à esquerda */
     width: 100%; /* Ocupa toda a largura */
     margin-top: 10px; /* Espaço acima dos botões */
   }
 
   .buttons a {
     margin-left: 0; /* Remove a margem à esquerda */
-    width: 100%; /* Faz os links ocuparem toda a largura */
-    padding: 10px; /* Adiciona um preenchimento */
+    width: fit-content; /* Faz os links ocuparem toda a largura */
+    height: fit-content;
     text-align: center; /* Centraliza o texto */
+    padding: 2px;
+    border-radius: 5px;
   }
+
+
 }
 
 @media only screen and (max-width: 480px) {
   .toolbar {
-    flex-direction: column; /* Muda a direção para coluna em telas pequenas */
-    height: auto; /* Altura automática para conteúdo */
+    flex-direction: column;
+    height: auto;
   }
 
+  .but {
+    width: 10px;
+  }
   .buttons {
-    flex-direction: column;
-    width: 100%; /* Mantém a largura total */
+    flex-direction: row;
+    width: 100%;
     justify-content: center;
+    padding: 2vw 0;
+    margin: 0 auto;
+  }
+  .buttons a {
+    width: fit-content;
+    height: fit-content;
+    padding: 2px;
+    border-radius: 3px;
+    /* border: 1px solid black; */
   }
 
   .buttons p {
-    font-size: 2vw; /* Aumenta ainda mais o texto */
+    font: bold 2vw "Barlow", sans-serif;
+    height: fit-content;
   }
 
   .abicca {
-    margin-bottom: 10px; /* Espaço abaixo do elemento Abicca */
+    margin-top: 10px;
     width: 50px;
   }
 }
