--- a/src/app/Components/noticia/noticia.component.html
+++ b/src/app/Components/noticia/noticia.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="cabecalho">
-        <h1>Últimas Notícias</h1>
+        <h1>Última Notícia</h1>
     </div>
 
     <div class="cartao">
