--- a/src/app/Components/associados/associados.component.html
+++ b/src/app/Components/associados/associados.component.html
@@ -11,10 +11,11 @@
     </div>
     <div class="texto">
         <h5>Por que se associar à A.B.I.C.C.A?</h5>
-        <p class="descricao">Associados participam ativamente das decisões estratégicas e integram comissões temáticas.<br>
-            Tenha acesso a informações relevantes sobre o mercado.<br>
-            Apoio da Abicca em ações de defesa contra concorrência desleal e importações prejudiciais.<br>
-            Tenha representatividade junto a órgãos governamentais.<br>
+        <p class="descricao">
+          <li>Associados participam ativamente das decisões estratégicas e integram comissões temáticas.</li>
+          <li>Tenha acesso a informações relevantes sobre o mercado.</li>
+          <li>Apoio da Abicca em ações de defesa contra concorrência desleal e importações prejudiciais.</li>
+          <li>Tenha representatividade junto a órgãos governamentais.</li>
         </p>
 
         <button class="bttn-SM" mat-button routerLink="/associese">
