--- a/src/app/Components/sobre/sobre.component.css
+++ b/src/app/Components/sobre/sobre.component.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: flex-end;
   margin: 0;
-  padding: 0 30px 0 0;
+  padding: 0 30px;
   font-size: 1.5rem;
   /* border: 1px solid black; */
   background-image: var(--image-sobre);
@@ -79,6 +79,7 @@
     font-size: 0.5em;
     margin: 0;
     padding: 0;
+    text-align: center;
     text-shadow: 0.5px 0.5px var(--primaria);
     font: 400 1em "Barlow", sans-serif;
     font-weight: bold;
