Ajuste no espaçamento da pagina associe-se

--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
@@ -121,6 +121,7 @@ section p {
 
     section p {
         font-size: 15px;
+        margin: 10px 10px 20px;
     }
 
     .video-container iframe {
